--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(Boost REQUIRED COMPONENTS system)
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
+  ArmMotion.action
   BaseMotion.action
 )
 
@@ -84,3 +85,7 @@ target_link_libraries(omni_base_node ${catkin_LIBRARIES} )
 add_executable(arm_node nodes/arm_node.cpp robot/arm.cpp robot/arm_kinematics.cpp robot/arm_trajectory.cpp)
 add_dependencies(arm_node ${catkin_EXPORTED_TARGETS})
 target_link_libraries(arm_node ${catkin_LIBRARIES} )
+
+add_executable(arm_node_action nodes/arm_node_action.cpp robot/arm.cpp robot/arm_kinematics.cpp robot/arm_trajectory.cpp)
+add_dependencies(arm_node_action ${catkin_EXPORTED_TARGETS})
+target_link_libraries(arm_node_action ${catkin_LIBRARIES} )
