--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,13 +79,13 @@ file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/gains/omni_base_gains.xml
       DESTINATION ${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_BIN_DESTINATION})
 
 add_executable(omni_base_node nodes/omni_base_node.cpp robot/omni_base.cpp)
-add_dependencies(omni_base_node ${catkin_EXPORTED_TARGETS})
+add_dependencies(omni_base_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(omni_base_node ${catkin_LIBRARIES} )
 
 add_executable(diff_drive_node nodes/diff_drive_node.cpp robot/diff_drive.cpp)
-add_dependencies(diff_drive_node ${catkin_EXPORTED_TARGETS})
+add_dependencies(diff_drive_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(diff_drive_node ${catkin_LIBRARIES} )
 
 add_executable(arm_node nodes/arm_node.cpp robot/arm.cpp robot/arm_kinematics.cpp robot/arm_trajectory.cpp)
-add_dependencies(arm_node ${catkin_EXPORTED_TARGETS})
+add_dependencies(arm_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(arm_node ${catkin_LIBRARIES} )
