--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1.3)
 project(hebi_cpp_api_examples)
 
-set(CMAKE_CXX_STANDARD_REQUIRED 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O2")
 
 ## Find catkin macros and libraries
 find_package(catkin REQUIRED COMPONENTS
