--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <depend>actionlib_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>trajectory_msgs</depend>
   <depend>hebi_cpp_api</depend>
   
   <export />
