Deprecated the (confusing) "robot" directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/gains/omni_base_gains.xml
 
 # Different nodes for the arm kits
 
-add_executable(omni_base_node nodes/omni_base_node.cpp robot/omni_base.cpp util/odom_publisher.cpp)
+add_executable(omni_base_node nodes/omni_base_node.cpp src/util/omni_base.cpp util/odom_publisher.cpp)
 add_dependencies(omni_base_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(omni_base_node ${catkin_LIBRARIES} )
 
@@ -120,21 +120,21 @@ add_executable(rosie_teach_repeat_controller_node kits/rosie/teach_repeat_contro
 add_dependencies(rosie_teach_repeat_controller_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(rosie_teach_repeat_controller_node ${catkin_LIBRARIES} )
 
-add_executable(diff_drive_node nodes/diff_drive_node.cpp robot/diff_drive.cpp)
+add_executable(diff_drive_node nodes/diff_drive_node.cpp src/util/diff_drive.cpp)
 add_dependencies(diff_drive_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(diff_drive_node ${catkin_LIBRARIES} )
 
 # Different nodes for the arm kits
 
-add_executable(arm_teach_repeat_node src/kits/arm/arm_teach_repeat_node.cpp robot/arm.cpp robot/kinematics_helper.cpp util/path.cpp util/waypoint.cpp)
+add_executable(arm_teach_repeat_node src/kits/arm/arm_teach_repeat_node.cpp src/util/arm.cpp src/util/kinematics_helper.cpp util/path.cpp util/waypoint.cpp)
 add_dependencies(arm_teach_repeat_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(arm_teach_repeat_node ${catkin_LIBRARIES} )
 
-add_executable(arm_node src/kits/arm/arm_node.cpp robot/arm.cpp robot/kinematics_helper.cpp)
+add_executable(arm_node src/kits/arm/arm_node.cpp src/util/arm.cpp src/util/kinematics_helper.cpp)
 add_dependencies(arm_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(arm_node ${catkin_LIBRARIES} )
 
-add_executable(arm_moveit_node src/kits/arm/arm_moveit_node.cpp robot/arm.cpp robot/kinematics_helper.cpp)
+add_executable(arm_moveit_node src/kits/arm/arm_moveit_node.cpp src/util/arm.cpp src/util/kinematics_helper.cpp)
 add_dependencies(arm_moveit_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(arm_moveit_node ${catkin_LIBRARIES} )
 
