--- a/config/a-2085-04_params.yaml
+++ b/config/a-2085-04_params.yaml
@@ -2,9 +2,9 @@
 names: [ "Base", "Shoulder", "Elbow", "Wrist1" ]
 families: [ "HEBI" ]
 gains_package: "hebi_cpp_api_examples"
-gains_file: "gains/4_dof_arm_gains.xml"
+gains_file: "config/gains/a-2085-04_gains.xml"
 hrdf_package: "hebi_cpp_api_examples"
-hrdf_file: "hrdf/4_dof_arm.hrdf"
+hrdf_file: "config/hrdf/a-2085-04.hrdf"
 home_position: [ 0.01, 2.09439, 2.09439, 0.01 ]
 
 # Note: the "moveit_joints" must matches the configuration from the MoveIt config; only
