Added gripper control through moveit instead.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,9 +161,6 @@ add_executable(gripper_node src/kits/arm/gripper_node.cpp)
 add_dependencies(gripper_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(gripper_node ${catkin_LIBRARIES} )
 
-# Nodes for HEBI-Clearpath Jackal Integration
-
-add_executable(gripper_joystick_node src/integrations/clearpath_jackal/gripper_joystick_node.cpp)
-add_dependencies(gripper_joystick_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
-target_link_libraries(gripper_joystick_node ${catkin_LIBRARIES} )
-
+add_executable(gripper_moveit_node src/kits/arm/gripper_moveit_node.cpp)
+add_dependencies(gripper_moveit_node hebi_cpp_api_examples_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
+target_link_libraries(gripper_moveit_node ${catkin_LIBRARIES} )
