Fix IK weirdness in ROSie demo by exposing IK seed in ROS
Refactors parameter names to use namespacing for gripper params
Requires more testing before PR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,11 @@ add_message_files(
   OffsetPlayback.msg
 )
 
+add_service_files(
+  FILES
+  SetIKSeed.srv
+)
+
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
