--- a/config/parallel-gripper_params.yaml
+++ b/config/parallel-gripper_params.yaml
@@ -1,9 +1,9 @@
 # Parameters for the module name, gains, etc
-gripper_name: "Spool"
-gripper_family: "HEBI"
-gripper_gains_package: "hebi_cpp_api_examples"
-gripper_gains_file: "config/gains/gripper_spool_gains.xml"
+name: "Spool"
+family: "HEBI"
+gains_package: "hebi_cpp_api_examples"
+gains_file: "config/gains/gripper_spool_gains.xml"
 
 # Note: the "moveit_joint" must matches the configuration from the MoveIt config; only
 # required when running MoveIt examples
-gripper_moveit_joint: "end_effector/input_l_finger"
+moveit_joint: "end_effector/input_l_finger"
