--- a/config/a-2085-04_params.yaml
+++ b/config/a-2085-04_params.yaml
@@ -1,6 +1,6 @@
 # Parameters for the module names, gains, hrdf, etc
 names: [ "Base", "Shoulder", "Elbow", "Wrist1" ]
-families: [ "HEBI" ]
+families: [ "Arm" ]
 gains_package: "hebi_cpp_api_examples"
 gains_file: "config/gains/a-2085-04_gains.xml"
 hrdf_package: "hebi_cpp_api_examples"
@@ -9,4 +9,4 @@ home_position: [ 0.01, 2.09439, 2.09439, 0.01 ]
 
 # Note: the "moveit_joints" must matches the configuration from the MoveIt config; only
 # required when running MoveIt examples
-moveit_joints: ["HEBI/base/X5_4", "HEBI/shoulder/X5_9", "HEBI/elbow/X5_4", "HEBI/wrist1/X5_1"]
+moveit_joints: ["Arm/Base/X5_4", "Arm/Shoulder/X5_9", "Arm/Elbow/X5_4", "Arm/Wrist1/X5_1"]
