--- a/config/a-2085-04_params.yaml
+++ b/config/a-2085-04_params.yaml
@@ -9,4 +9,4 @@ home_position: [ 0.01, 2.09439, 2.09439, 0.01 ]
 
 # Note: the "moveit_joints" must matches the configuration from the MoveIt config; only
 # required when running MoveIt examples
-moveit_joints: ["HEBI/Base/X5_4", "HEBI/Shoulder/X5_9", "HEBI/Elbow/X5_4", "HEBI/Wrist1/X5_1"]
+moveit_joints: ["HEBI/base/X5_4", "HEBI/shoulder/X5_9", "HEBI/elbow/X5_4", "HEBI/wrist1/X5_1"]
