--- a/config/diff_drive_params.yaml
+++ b/config/diff_drive_params.yaml
@@ -1,3 +1,3 @@
 # Parameters for the module names, gains, hrdf, etc
-names: [ "Left", "Right" ]
+names: [ "left", "right" ]
 families: [ "DiffDrive" ]
