--- a/config/omni_base_params.yaml
+++ b/config/omni_base_params.yaml
@@ -1,3 +1,3 @@
 # Parameters for the module names, gains, hrdf, etc
-names: [ "Wheel1", "Wheel2", "Wheel3" ]
-families: [ "Rosie" ]
+names: [ "wheel1", "wheel2", "wheel3" ]
+families: [ "OmniDrive" ]
