Updates to address PR concerns

--- a/config/A-2240-05_params.yaml
+++ b/config/A-2240-05_params.yaml
@@ -2,9 +2,9 @@
 names: [ "J1_base", "J2_shoulder", "J3_elbow", "J4_wrist1", "J5_wrist2" ]
 families: [ "Arm" ]
 gains_package: "hebi_cpp_api_examples"
-gains_file: "config/gains/a-2240-05_gains.xml"
+gains_file: "config/gains/A-2240-05_gains.xml"
 hrdf_package: "hebi_description"
-hrdf_file: "hrdf/a-2240-05.hrdf"
+hrdf_file: "hrdf/A-2240-05.hrdf"
 home_position: [ 0.01, 2.09439, 2.09439, 0.01, 1.5707963 ]
 
 # Note: the "moveit_joints" must matches the configuration from the MoveIt config; only
