--- a/config/A-2085-04_params.yaml
+++ b/config/A-2085-04_params.yaml
@@ -2,9 +2,9 @@
 names: [ "J1_base", "J2_shoulder", "J3_elbow", "J4_wrist1" ]
 families: [ "Arm" ]
 gains_package: "hebi_cpp_api_examples"
-gains_file: "config/gains/a-2085-04_gains.xml"
+gains_file: "config/gains/A-2085-04_gains.xml"
 hrdf_package: "hebi_cpp_api_examples"
-hrdf_file: "config/hrdf/a-2085-04.hrdf"
+hrdf_file: "config/hrdf/A-2085-04.hrdf"
 home_position: [ 0.01, 2.09439, 2.09439, 0.01 ]
 
 # Note: the "moveit_joints" must matches the configuration from the MoveIt config; only
