--- a/config/A-2085-06_params.yaml
+++ b/config/A-2085-06_params.yaml
@@ -1,6 +1,6 @@
 # Parameters for the module names, gains, hrdf, etc
 names: [ "J1_base", "J2_shoulder", "J3_elbow", "J4_wrist1", "J5_wrist2", "J6_wrist3" ]
-families: [ "Arm" ]
+families: [ "Example Arm" ]
 gains_package: "hebi_cpp_api_examples"
 gains_file: "config/gains/A-2085-06_gains.xml"
 hrdf_package: "hebi_cpp_api_examples"
